# OpenJK-Module-Ratio

./: CMakeLists.txt  README.md
include/mpp/: mppShared.h
src/: ratio.c
